# deepl-gui-rs

./: Cargo.toml
src/: main.rs
