[package]
name = "deepl-gui-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.21.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.25", features = ["net", "rt-multi-thread"] }
strum = { version = "0.24.1", features = ["derive"] }
